added recent result tab

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Treasure Hunt</title>
+    <title>Roulette</title>
   </head>
   <body>
     <script src="node_modules/os-browserify/browser.js"></script>
